--- a/styles.css
+++ b/styles.css
@@ -212,7 +212,7 @@ header {
 }
 
 .tokenomics ul li strong {
-    color: #4B56D2;
+    color: #0F111A;
     margin-right: 0.5rem;
     font-weight: 700;
 }
