--- a/styles.css
+++ b/styles.css
@@ -171,7 +171,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 2rem 0;
     font-family: 'Space Grotesk', sans-serif;
-    width: 50%;
+    place-self: center;
 }
 
 .tokenomics h3 {
