--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,8 @@ header {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    width: 45%;
+    width: 70%;
+    justify-self: center;
 }
 
 .tokenomics ul li {
@@ -253,7 +254,7 @@ header {
     flex-direction: column;
     gap: 2rem;
     position: relative;
-    margin: 2rem 0;
+    margin: 6rem 0;
     padding-left: 2rem;
 }
 
