--- a/styles.css
+++ b/styles.css
@@ -191,7 +191,7 @@ header {
 .tokenomics ul {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 25px;
     display: flex;
     flex-direction: column;
     gap: 1rem;
