--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,7 @@ header {
   
   .whitepaper-section h2 {
     font-size: 2rem;
-    color: #2A3BFF;
+    color: #fff;
     margin-bottom: 1rem;
   }
   
