--- a/styles.css
+++ b/styles.css
@@ -113,7 +113,7 @@ header {
 #3d-viewer {
     width: 100vw;
     height: 100vh;
-    background-color: #111; /* Donkergrijs voor een moderne uitstraling */
+    background-color: #222; /* Donkergrijze achtergrond voor een modern uiterlijk */
   }
 
 /* Hero Section */
