--- a/styles.css
+++ b/styles.css
@@ -110,11 +110,7 @@ header {
     100% { transform: translateX(-50%); }
 }
 
-#3d-viewer {
-    width: 100vw;
-    height: 100vh;
-    background-color: #222; /* Donkergrijze achtergrond voor een modern uiterlijk */
-  }
+
 
 /* Hero Section */
 .hero {
@@ -125,6 +121,12 @@ header {
     position: relative;
     padding: 160px 0 120px;
 }
+
+.d3viewer {
+    width: 100vw;
+    height: 100vh;
+    background-color: #222; /* Donkergrijze achtergrond voor een modern uiterlijk */
+  }
 
 .hero-content {
     max-width: 700px;
