--- a/styles.css
+++ b/styles.css
@@ -122,11 +122,11 @@ header {
     padding: 160px 0 120px;
 }
 
-.d3viewer {
+ #d3viewer {
     width: 100vw;
     height: 100vh;
     background-color: #222; /* Donkergrijze achtergrond voor een modern uiterlijk */
-  }
+ }
 
 .hero-content {
     max-width: 700px;
